# batch_renamer

./: .gitignore  Cargo.toml  README.md
src/: args.rs  bak.main.rs  lib.rs  main.rs  names.rs  print.rs  state.rs  thread.rs
