[package]
name = "batch_renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "batch_renamer"
path = "src/lib.rs"

[dependencies]
glob = "0.3.1"
itertools = "0.12.0"
kamadak-exif = "0.5.5"
walkdir = "2.4.0"
